# mermaid-rs

./: .gitignore  .otto.yml  Cargo.toml  README.md  mermaid-rs.yml
.github/workflows/: binary-release.yml  ci.yml
compat/: run_comparison.py
compat/scenarios/: er_basic.yaml  flowchart_basic.yaml  flowchart_labels.yaml  journey_basic.yaml  mindmap_basic.yaml  pie_basic.yaml  pie_showdata.yaml  sequence_basic.yaml  state_basic.yaml
docs/: mermaid-rs-architecture.md  spec-comparison.md
src/: cli.rs  lib.rs  main.rs
src/cli/: args.rs  mod.rs  output.rs
src/cli/commands/: er.rs  flowchart.rs  journey.rs  mindmap.rs  mod.rs  pie.rs  render.rs  requirement.rs  sequence.rs  state.rs
src/core/: config.rs  diagram.rs  direction.rs  error.rs  mod.rs  style.rs  utils.rs
src/diagrams/: mod.rs
src/diagrams/er/: diagram.rs  entity.rs  mod.rs  relationship.rs
src/diagrams/flowchart/: class_def.rs  diagram.rs  link.rs  mod.rs  node.rs  subgraph.rs
src/diagrams/journey/: diagram.rs  mod.rs  section.rs  task.rs
src/diagrams/mindmap/: diagram.rs  mod.rs  node.rs
src/diagrams/pie/: mod.rs  piechart.rs
src/diagrams/requirement/: diagram.rs  element.rs  mod.rs  requirement_type.rs
src/diagrams/sequence/: diagram.rs  logic.rs  message.rs  mod.rs  note.rs  participant.rs
src/diagrams/state/: composite.rs  concurrent.rs  mod.rs  (+3 more)
src/render/: client.rs  encoder.rs  mod.rs
tests/: cli_test.rs  er_test.rs  flowchart_test.rs  journey_test.rs  mindmap_test.rs  pie_test.rs  render_test.rs  requirement_test.rs  sequence_test.rs  state_test.rs
tests/common/: mod.rs
