[package]
name = "mermaid-rs"
version = "0.1.0"
edition = "2021"
authors = ["Scott Idler <scott.idler@gmail.com>"]
build = "build.rs"
description = "A Rust CLI tool for generating Mermaid diagrams programmatically"
license = "MIT"
repository = "https://github.com/scottidler/mermaid-rs"
keywords = ["mermaid", "diagram", "cli", "visualization"]
categories = ["command-line-utilities", "visualization"]

[dependencies]
# CLI
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "io-std", "io-util"] }

# HTTP client (rustls for cross-compilation support)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Encoding
base64 = "0.22"
urlencoding = "2"

# Serialization (config files)
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"

# Error handling
thiserror = "2"
anyhow = "1"

# Clipboard
arboard = "3"

# Open in browser
open = "5"

# Color output
owo-colors = "4"

# Logging
log = "0.4"
env_logger = "0.11"

[dev-dependencies]
tempfile = "3"
pretty_assertions = "1"
tokio-test = "0.4"
wiremock = "0.6"

[build-dependencies]
# For build.rs if needed
